# phf-bench

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
benches/: phf.rs  ptrhash.rs
src/: lib.rs  phf.rs  ptrhash.rs
