[package]
name = "phf-benchmark"
version = "0.0.0"
authors = ["astral4"]
edition = "2021"
description = "Benchmarking PHF-based hashmaps in Rust"
readme = "README.md"
repository = "https://github.com/astral4/phf-benchmark"
license = "MIT OR Apache-2.0"

[dependencies]
ahash = "0.8.11"
phf = "0.11.2"
ptr_hash = { git = "https://github.com/RagnarGrootKoerkamp/PTRHash.git", rev = "727afbe0afa6939c756f89eb782de8c683e583fa" }

[dev-dependencies]
divan = { version = "0.1.14", default-features = false }
phf_codegen = "0.11.2"
rand = "0.8.5"
rand_xoshiro = "0.6.0"

[build-dependencies]
phf_codegen = "0.11.2"
rand = "0.8.5"
rand_xoshiro = "0.6.0"

[lints.rust]
async_fn_in_trait = "allow"
ffi_unwind_calls = "warn"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "forbid"
non_local_definitions = "warn"
nonstandard_style = { level = "deny", priority = 1 }
redundant_lifetimes = "deny"
rust_2018_idioms = { level = "deny", priority = 1 }
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[lints.clippy]
module_name_repetitions = { level = "allow", priority = 1 }
pedantic = "warn"

[profile.bench]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[[bench]]
name = "phf"
harness = false

[[bench]]
name = "ptrhash"
harness = false
